src/objects/JBCXM__CTAGroup__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CTAGroup</relationshipLabel>
        <relationshipName>CTAGroup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__ActionPlan__c</fullName>
        <label>Action Plan</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__ActiveDate__c</fullName>
        <label>Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__CTAGroupCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTA Group Category</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>CTAGroupCategory</relationshipLabel>
        <relationshipName>CTAGroupCategory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__ClosedDate__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__ClosedLostObjectiveCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closed Lost Objective Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__ClosedTaskCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closed Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__ClosedWonObjectiveCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Closed Won Objective Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Description__c</fullName>
        <label>Plan Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <label>EntityType</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSClosedOverdue__c</fullName>
        <formula>IF( JBCXM__ClosedDate__c &gt;  JBCXM__DueDate__c , TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDaysDue__c</fullName>
        <formula>JBCXM__OriginalDueDate__c -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDaysPastDueDate__c</fullName>
        <formula>IF( JBCXM__DueDate__c &lt; TODAY() , TODAY() - JBCXM__DueDate__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past Due Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDaysToClose__c</fullName>
        <formula>IF( ISBLANK(JBCXM__ClosedDate__c) ,  TODAY() -  DATEVALUE(CreatedDate) , JBCXM__ClosedDate__c - DATEVALUE(CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDaysUntilClose__c</fullName>
        <formula>IF(ISBLANK( JBCXM__ClosedDate__c ),  JBCXM__DueDate__c - TODAY() , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDueDateVariance__c</fullName>
        <formula>JBCXM__OriginalDueDate__c -  JBCXM__DueDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSOverdueType__c</fullName>
        <formula>IF( JBCXM__Status__r.JBCXM__SystemName__c =  &quot;Active&quot; , IF( JBCXM__DueDate__c - TODAY() &lt; 0, &quot;Overdue&quot;, IF(JBCXM__DueDate__c - TODAY() &gt; 7, &quot;Open&quot;, &quot;Due next 7 days&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSOverdue__c</fullName>
        <formula>IF( JBCXM__DueDate__c &lt; TODAY() , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSPercentComplete__c</fullName>
        <formula>IF(  JBCXM__TotalObjectiveCount__c == 0 ,  IF( JBCXM__Status__r.Name == &quot;Closed&quot; ,1,0) , ( (JBCXM__ClosedWonObjectiveCount__c + JBCXM__ClosedLostObjectiveCount__c) /  JBCXM__TotalObjectiveCount__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JBCXM__HighLights__c</fullName>
        <label>Company Highlights</label>
        <length>35000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__OpenObjectiveCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Objective Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__OpenTaskCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__OriginalDueDate__c</fullName>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Success plans</relationshipLabel>
        <relationshipName>GSSuccessPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>JBCXM__GSRelationship__c</referenceTo>
        <relationshipLabel>CTAGroup Relationship</relationshipLabel>
        <relationshipName>CTAGroupRelationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Rules</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>Status</relationshipLabel>
        <relationshipName>Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SuccessPlanType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Success Plan Type</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>Type</relationshipLabel>
        <relationshipName>Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>JBCXM__SuccessPlanTemplate__c</referenceTo>
        <relationshipLabel>SuccessPlanTemplate</relationshipLabel>
        <relationshipName>SuccessPlanTemplate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__TotalObjectiveCount__c</fullName>
        <formula>JBCXM__OpenObjectiveCount__c  + JBCXM__ClosedLostObjectiveCount__c + JBCXM__ClosedWonObjectiveCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total objective count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CTA Group</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CTA Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CTA Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>